--- a/web.config
+++ b/web.config
@@ -12,7 +12,7 @@
     <webSocket enabled="false" />
     <handlers>
       <!-- Indicates that the server.js file is a node.js site to be handled by the iisnode module -->
-      <add name="iisnode" path="bin/www" verb="*" modules="iisnode"/>
+      <add name="iisnode" path="server" verb="*" modules="iisnode"/>
     </handlers>
     <rewrite>
       <rules>
