Modify GitHub Actions workflow for Quno deployment
Updated the workflow to use Windows for build and added npm install, build, and test steps.

--- a/.github/workflows/main_quno.yml
+++ b/.github/workflows/main_quno.yml
@@ -11,19 +11,52 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Set up Node.js version
+        uses: actions/setup-node@v1
         with:
           node-version: '18.x'
 
-      # Cache npm dependencies
-      - name: Cache npm
-        uses: actions/cache@v3
+      - name: npm install, build, and test
+        run: |
+          npm install
+          npm run build --if-present
+          npm run test --if-present
+      
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v4
         with:
-          path: ~/
+          name: node-app
+          path: |
+            package.json
+            package-lock.json
+            server.js
+            build/
+            src/
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: node-app
+
+      - name: 'Deploy to Azure Web App'
+        uses: azure/webapps-deploy@v2
+        id: deploy-to-webapp
+        with:
+          app-name: 'Quno'
+          slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_CC80449BF0D64C49B369DB6F4AFCC3E4 }}
+          package: .
+
