--- a/.github/workflows/main_quno.yml
+++ b/.github/workflows/main_quno.yml
@@ -32,11 +32,8 @@ jobs:
         with:
           name: node-app
           path: |
-            package.json
-            package-lock.json
-            server.js
-            build/
-            src/
+            .
+            !**/node_modules/.cache/**
 
   deploy:
     runs-on: ubuntu-latest
@@ -59,4 +56,5 @@ jobs:
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_CC80449BF0D64C49B369DB6F4AFCC3E4 }}
           package: .
+
 
